--- a/templates/user/home.html
+++ b/templates/user/home.html
@@ -10,9 +10,10 @@
 <section id="home-main" class="five-row">
   {% for task in tasks %}
   <div align="center" class="five task">
+    <a href="{{ url_for('task.task_complete', id=task.id) }}"><i class="fas fa-check-square complete"></i></a><br><br>
     <a href="{{ url_for('task.task_detail', id=task.id) }}" class="task-name"><strong>{{ task.template.title }}</strong></a>
     <p>Due: {{ task.due_date }}</p>
-    <a href="{{ url_for('task.snooze', id=task.id) }}" class='snooze link-btn'>Snooze</a>
+    <a href="{{ url_for('task.snooze', id=task.id) }}" class='link-btn snooze'>Snooze</a>
     <br><a class="delete" href="{{ url_for('task.delete_task', id=task.id) }}" class="delete">Delete</a>
   </div>
   {% endfor %}
